query validator id
